# dask-geopandas

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.rst  pyproject.toml  readthedocs.yml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: release.yml  release_to_pypi.yml  tests.yaml
ci/envs/: 310-latest.yaml  310-minimal.yaml  310-no-optional-deps.yaml  311-dev.yaml  311-latest-no-expr.yaml  311-latest.yaml  311-minimal.yaml  311-no-expr.yaml  311-no-optional-deps.yaml  312-dev.yaml  312-latest.yaml  313-latest.yaml  314-dev.yaml  314-latest.yaml  38-minimal.yaml  39-minimal.yaml  39-no-optional-deps.yaml
continuous_integration/envs/: 310-latest.yaml  311-dev.yaml  311-latest.yaml  37-latest.yaml  37-minimal.yaml  38-latest.yaml  38-minimal.yaml  39-dev.yaml  39-latest.yaml  39-no-optional-deps.yaml
continuous_integration/travis/: install.sh  run_tests.sh  travis-36.yaml  travis-37.yaml  travis-38.yaml
dask_geopandas/: __init__.py  _expr.py  _utils.py  _version.py  array.py  backends.py  clip.py  core.py  dataframe.py  expr.py  geohash.py  hilbert_distance.py  morton_distance.py  overlay.py  sjoin.py  utils.py
dask_geopandas/io/: arrow.py  file.py  parquet.py
dask_geopandas/tests/: conftest.py  test_clip.py  test_core.py  test_distributed.py  test_geohash.py  test_hilbert_distance.py  test_morton_distance.py  test_overlay.py  test_sjoin.py  test_spatial_partitioning.py
dask_geopandas/tests/data/: README.md
dask_geopandas/tests/io/: conftest.py  test_arrow.py  test_backend_integration.py  test_file.py  test_parquet.py
doc/: environment.yml  requirements.txt
doc/source/: api.rst  conf.py  getting_started.md  guide.md  index.md  installation.md  parquet.md
doc/source/_static/: custom.css
doc/source/docs/reference/: geodataframe.rst  geoseries.rst  io.rst  tools.rst
doc/source/gallery/: openstreetmap_points.ipynb
doc/source/guide/: basic-intro.ipynb  dissolve.ipynb  spatial-partitioning.ipynb
doc/source/reference/: geoseries.rst  tools.rst
notebooks/: basic-intro.ipynb  dissolve.ipynb  spatial-partitioning.ipynb
tests/: test_clip.py  test_core.py  test_dataframe.py  test_geohash.py  test_hilbert_curve.py  test_hilbert_distance.py  test_morton_distance.py  test_sjoin.py  test_spatial_partitioning.py
tests/io/: conftest.py  test_arrow.py  test_file.py  test_parquet.py
